# alexa_skills

./: Alexa_Server.py  Build_Your_Own_Search_Engine_STUDENT.ipynb  Entity_Database.py  README.md  README.txt  Search_Engine.py  environment.yml  get articles.ipynb  poetry_server.py  rock_paper_scisors.py  setup.py
.ipynb_checkpoints/: get articles-checkpoint.ipynb
Database/: Entity_Database.py  Search_Engine.py  test_database.ipynb
FaceRecog/: README.md  facerec_skill.py  skill_setup.txt
FaceRecog/.ipynb_checkpoints/: Face-Recognition-checkpoint.ipynb
FaceRecog/face_label/: face_labeling.py
NoteBot/: NoteNoteBook.ipynb  README.md  notebot_skill.py  song_labeling_notebook.ipynb
NoteBot/.ipynb_checkpoints/: Face-Recognition-With-Module-checkpoint.ipynb  NoteNoteBook-checkpoint.ipynb
Personalized/: Face-Recognition-With-Module.ipynb  NoteNoteBook.ipynb  facerec_skill.py  help.txt  skill_setup.txt  tod.txt
Personalized/.ipynb_checkpoints/: NoteNoteBook-checkpoint.ipynb
Personalized/face_label/: face_labeling_personalized.py
Personalized/note_code/: notepy.py
Sentiment/: sentiment_classifier.py
SongFP/: README.md  skill_setup.txt  song_labeling_notebook.ipynb  songfp_skill.py
SongFP/.ipynb_checkpoints/: song_labeling_notebook-checkpoint.ipynb
moviebot/: moviebot.py  readme.txt
poetry_gen/: lstm_poet.py  poet.py  poet.py~  poetry_server.py  readme.md
poetry_gen/c_plus_plus_project/src/: Makefile.am  Makefile.in  main.cc
rock_paper_scisors/: readme.md  rock_paper_scisors.py  rps.py
sanitized_poetry_dataset/: token_dict.pkl
(+76 files in other folders)
